--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "element-plus": "^2.2.29",
     "sass": "^1.53.0",
     "socket.io-client": "^4.5.1",
     "vue": "^3.2.37",
@@ -20,6 +21,6 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
     "vite": "^3.0.0",
-    "vue-svg-loader": "^0.16.0"
+    "vue-svg-loader": "^0.10.0"
   }
 }
