--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.4",
+    "@fullcalendar/vue3": "^6.1.4",
     "axios": "^0.27.2",
     "element-plus": "^2.2.29",
     "sass": "^1.53.0",
@@ -21,6 +23,6 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
     "vite": "^3.0.0",
-    "vue-svg-loader": "^0.10.0"
+    "vue-svg-loader": "^0.16.0"
   }
 }
