--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "sass": "^1.53.0",
     "socket.io-client": "^4.5.1",
     "vue": "^3.2.37",
+    "vue-bootstrap-calendar": "^1.3.6",
+    "vue-cal": "^4.8.1",
     "vue-router": "^4.1.2",
     "vuex": "^4.0.2"
   },
