--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-airbnb-style-datepicker": "^2.7.1",
     "vue-class-component": "^8.0.0-rc.1",
     "vue-router": "^4.1.2",
+    "vue3-google-map": "^0.15.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
